@@ -36,6 +36,8 @@ Version 0.7.5 UNRELEASED
     http://metadata.ftp-master.debian.org/changelogs -- it is the default for a
     few years already.
 
+  * Add function to get URI of a package version
+
 - Documentation:
 
   * manpage:
